--- a/config.yml
+++ b/config.yml
@@ -11,6 +11,7 @@ socket:
   port: 19000
 
 redis:
+  enabled: false
   host: 127.0.0.1
   port: 6379
   password:
@@ -18,6 +19,7 @@ redis:
   poolsize: 10
 
 mqtt:
+  enabled: false
   broker: broker.emqx.io
   port: 1883
   clientId: go_mqtt_client
@@ -26,6 +28,7 @@ mqtt:
   topics: topic/test
 
 datasource:
+  enabled: false
   dialect: postgres
   schema: public
   url: host=127.0.0.1 port=54320 user=postgres dbname=golang password=root sslmode=disable
